<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333f4f"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.blocnote.MainActivity"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/label_login"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#72da9d"
        android:padding="8dp"
        android:text="@string/button_connexion"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_register"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lostpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />
    
</LinearLayout>
